# AetherLink

./: .gitignore  .npmrc  Dockerfile  capacitor.config.ts  index.html  package-lock.json  package.json  package.json.new  package.json.old  progress.md  sweep.yaml  temp_1764671510975(3).txt  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: android-build.yml  android-release.yml  init-tauri-ios.yml  ios-build.yml  ios-release.yml  pr-agent.yml  release.yml  tauri-android.yml  tauri-ios.yml  tauri-release-dual.yml  tauri-release.yml  test-build.yml
.roo/: mcp.json
android/: aetherlink.keystore  capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  capacitor.build.gradle
artifacts/: perf-baseline.json
docs/: APK-SIZE-ANALYSIS-SUMMARY.md  CONTRIBUTING.md  CORS_PROXY_GUIDE.md  CUSTOM_SWITCH_USAGE_REPORT.md  HAPTIC_FEEDBACK_FEATURE.md  HAPTIC_FEEDBACK_UI_OPTIMIZATION.md  HARMONYOS_ADAPTATION_SUMMARY.md  HARMONYOS_CHECKLIST.md  MCP_METASO_SEARCH_GUIDE.md  PACKAGE-SIZE-ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SIMPLE_NOTE_IMPLEMENTATION_PLAN.md  cherry-studio数据设置UI风格总结.md  dependency-update-analysis.md  harmonyos-adaptation.md  harmonyos-migration-guide.md  harmonyos-quick-start.md  i18n-guide.md  iOS构建问题修复指南.md  input-cleanup-execution-plan.md  input-refactoring-summary.md  ios-build-failure-analysis.md  sidebar-gesture-optimization.md  webdav-cors-solution.md
docs/architecture-upgrade/: README.md  cloud-sync-system-design.md  unified-network-layer.md
docs/archive/: input-box-enterprise-refactor.md
docs/design/: ai-debate-refactor.md  ai-settings-mcp-server.md  skills-system.md
docs/guides/: gemini-tts-integration.md  mobile-haptic-test.md  platform-detection-migration.md  safe-area-migration.md
docs/theme-migration/: README.md  adding-new-theme.md  session-04-progress.md  session-04-summary.md  session-04-testing-guide.md  session-05-progress.md  session-05-summary.md  session-05-testing-guide.md  session-09-summary.md  theme-migration-plan.md
ios/App/: Podfile
patches/: rolldown-vite+7.2.8.patch
plans/: chat-input-refactor.md  data-loss-bug-analysis.md  file-paste-bug-analysis.md
public/: manifest.webmanifest
scripts/: cors-proxy.js  fix-capacitor-paths.cjs  perf-baseline.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/hooks/: useMCP.ts  (+9 more)
(+696 files in other folders)
